// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HabitList Component Snapshot renders with data 1`] = `
<div
  className="sc-gqjmRU gggsyL habitList"
>
  <div
    className="sc-gzVnrw kmJYvF addHabitButton"
    onClick={[Function]}
  >
    <form
      className="sc-dnqmqq jgPXaW"
    >
      <input
        className="sc-iwsKbI jOlfmC habitTitleInput"
        onChange={[Function]}
        placeholder="Habit Title"
        type="text"
        value=""
      />
      <button
        className="sc-gZMcBi hiiSes"
        onClick={[Function]}
      >
        Start New Habit
      </button>
    </form>
    <div
      className="sc-htoDjs kUfOZM"
      data-testid="AddHabitButtonClose"
      onClick={[Function]}
    >
      <svg
        className="icon"
        fill="currentColor"
        height={25}
        size={25}
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width={25}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        />
      </svg>
    </div>
  </div>
  <div
    checked={false}
    className="sc-bdVaJa flVaPf"
    data-testid="HabitListItem"
  >
    <div
      className="sc-ifAKCX eySOSY habitListItemAction"
      onClick={[Function]}
    />
    <h4
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Work on HabitCheck
    </h4>
    <div
      className="sc-EHOje BsGex habitListItemStatus"
    >
      <div
        className="sc-bwzfXH jbgUER"
      >
        <p
          style={
            Object {
              "margin": 0,
            }
          }
        >
          NEW
        </p>
      </div>
      <div
        className="sc-bZQynM gWESGZ habitListItemCheckbox"
      >
        <svg
          fill="currentColor"
          height={23}
          size={23}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "border": "1px solid #2D3142",
              "borderRadius": "4px",
              "color": "white",
            }
          }
          viewBox="0 0 448 512"
          width={23}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    checked={false}
    className="sc-bdVaJa flVaPf"
    data-testid="HabitListItem"
  >
    <div
      className="sc-ifAKCX eySOSY habitListItemAction"
      onClick={[Function]}
    />
    <h4
      style={
        Object {
          "margin": 0,
        }
      }
    >
      TEST_DATA_1
    </h4>
    <div
      className="sc-EHOje BsGex habitListItemStatus"
    >
      <div
        className="sc-bwzfXH kvljid"
      >
        <div
          className="sc-htpNat itjhXY"
        >
          <p
            className="number"
            style={
              Object {
                "fontSize": 18,
              }
            }
          >
            24
          </p>
          <span
            aria-hidden="false"
            aria-label="fire"
            className="emoji"
            role="img"
            style={
              Object {
                "fontSize": 19,
              }
            }
          >
            🔥
          </span>
        </div>
      </div>
      <div
        className="sc-bZQynM gWESGZ habitListItemCheckbox"
      >
        <svg
          fill="currentColor"
          height={23}
          size={23}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "border": "1px solid #2D3142",
              "borderRadius": "4px",
              "color": "white",
            }
          }
          viewBox="0 0 448 512"
          width={23}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    checked={false}
    className="sc-bdVaJa flVaPf"
    data-testid="HabitListItem"
  >
    <div
      className="sc-ifAKCX eySOSY habitListItemAction"
      onClick={[Function]}
    />
    <h4
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Quit Smoking
    </h4>
    <div
      className="sc-EHOje BsGex habitListItemStatus"
    >
      <div
        className="sc-bwzfXH kvljid"
      >
        <div
          className="sc-htpNat itjhXY"
        >
          <p
            className="number"
            style={
              Object {
                "fontSize": 18,
              }
            }
          >
            40
          </p>
          <span
            aria-hidden="false"
            aria-label="fire"
            className="emoji"
            role="img"
            style={
              Object {
                "fontSize": 19,
              }
            }
          >
            🔥
          </span>
        </div>
      </div>
      <div
        className="sc-bZQynM gWESGZ habitListItemCheckbox"
      >
        <svg
          fill="currentColor"
          height={23}
          size={23}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "border": "1px solid #2D3142",
              "borderRadius": "4px",
              "color": "white",
            }
          }
          viewBox="0 0 448 512"
          width={23}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    checked={false}
    className="sc-bdVaJa bWpfaw"
    data-testid="HabitListItem"
  >
    <div
      className="sc-ifAKCX eySOSY habitListItemAction"
      onClick={[Function]}
    />
    <h4
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Meditate
    </h4>
    <div
      className="sc-EHOje BsGex habitListItemStatus"
    >
      <div
        className="sc-bwzfXH jJYxWb"
      >
        <div
          className="sc-htpNat itjhXY"
        >
          <p
            className="number"
            style={
              Object {
                "fontSize": 18,
              }
            }
          >
            -3
          </p>
          <div
            className="sc-bxivhb dNeoOh"
          >
            <svg
              fill="none"
              height={21}
              size={21}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width={21}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="23 18 13.5 8.5 8.5 13.5 1 6"
              />
              <polyline
                points="17 18 23 18 23 12"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="sc-bZQynM gWESGZ habitListItemCheckbox"
      >
        <svg
          fill="currentColor"
          height={23}
          size={23}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "border": "1px solid #2D3142",
              "borderRadius": "4px",
              "color": "white",
            }
          }
          viewBox="0 0 448 512"
          width={23}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    checked={false}
    className="sc-bdVaJa bWpfaw"
    data-testid="HabitListItem"
  >
    <div
      className="sc-ifAKCX eySOSY habitListItemAction"
      onClick={[Function]}
    />
    <h4
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Sleep on time
    </h4>
    <div
      className="sc-EHOje BsGex habitListItemStatus"
    >
      <div
        className="sc-bwzfXH jJYxWb"
      >
        <div
          className="sc-htpNat itjhXY"
        >
          <p
            className="number"
            style={
              Object {
                "fontSize": 18,
              }
            }
          >
            -1
          </p>
          <div
            className="sc-bxivhb dNeoOh"
          >
            <svg
              fill="none"
              height={21}
              size={21}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width={21}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="23 18 13.5 8.5 8.5 13.5 1 6"
              />
              <polyline
                points="17 18 23 18 23 12"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="sc-bZQynM gWESGZ habitListItemCheckbox"
      >
        <svg
          fill="currentColor"
          height={23}
          size={23}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "border": "1px solid #2D3142",
              "borderRadius": "4px",
              "color": "white",
            }
          }
          viewBox="0 0 448 512"
          width={23}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    checked={true}
    className="sc-bdVaJa fJLxhr"
    data-testid="HabitListItem"
  >
    <div
      className="sc-ifAKCX eySOSY habitListItemAction"
      onClick={[Function]}
    />
    <h4
      style={
        Object {
          "margin": 0,
        }
      }
    >
      90 min Yoga
    </h4>
    <div
      className="sc-EHOje BsGex habitListItemStatus"
    >
      <div
        className="sc-bZQynM gWESGZ habitListItemCheckbox"
      >
        <svg
          fill="currentColor"
          height={23}
          size={23}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width={23}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    checked={true}
    className="sc-bdVaJa fJLxhr"
    data-testid="HabitListItem"
  >
    <div
      className="sc-ifAKCX eySOSY habitListItemAction"
      onClick={[Function]}
    />
    <h4
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Push Ups
    </h4>
    <div
      className="sc-EHOje BsGex habitListItemStatus"
    >
      <div
        className="sc-bZQynM gWESGZ habitListItemCheckbox"
      >
        <svg
          fill="currentColor"
          height={23}
          size={23}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width={23}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    checked={true}
    className="sc-bdVaJa fJLxhr"
    data-testid="HabitListItem"
  >
    <div
      className="sc-ifAKCX eySOSY habitListItemAction"
      onClick={[Function]}
    />
    <h4
      style={
        Object {
          "margin": 0,
        }
      }
    >
      30 min walk
    </h4>
    <div
      className="sc-EHOje BsGex habitListItemStatus"
    >
      <div
        className="sc-bZQynM gWESGZ habitListItemCheckbox"
      >
        <svg
          fill="currentColor"
          height={23}
          size={23}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width={23}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    checked={true}
    className="sc-bdVaJa fJLxhr"
    data-testid="HabitListItem"
  >
    <div
      className="sc-ifAKCX eySOSY habitListItemAction"
      onClick={[Function]}
    />
    <h4
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Keto Diet
    </h4>
    <div
      className="sc-EHOje BsGex habitListItemStatus"
    >
      <div
        className="sc-bwzfXH kvljid"
      >
        <div
          className="sc-htpNat itjhXY"
        >
          <p
            className="number"
            style={
              Object {
                "fontSize": 18,
              }
            }
          >
            3
          </p>
          <span
            aria-hidden="false"
            aria-label="fire"
            className="emoji"
            role="img"
            style={
              Object {
                "fontSize": 19,
              }
            }
          >
            🔥
          </span>
        </div>
      </div>
      <div
        className="sc-bZQynM gWESGZ habitListItemCheckbox"
      >
        <svg
          fill="currentColor"
          height={23}
          size={23}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width={23}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`HabitList Component Snapshot renders with empty data 1`] = `
<div
  className="sc-gqjmRU gggsyL habitList"
>
  <div
    className="sc-gzVnrw kmJYvF addHabitButton"
    onClick={[Function]}
  >
    <form
      className="sc-dnqmqq jgPXaW"
    >
      <input
        className="sc-iwsKbI jOlfmC habitTitleInput"
        onChange={[Function]}
        placeholder="Habit Title"
        type="text"
        value=""
      />
      <button
        className="sc-gZMcBi hiiSes"
        onClick={[Function]}
      >
        Start New Habit
      </button>
    </form>
    <div
      className="sc-htoDjs kUfOZM"
      data-testid="AddHabitButtonClose"
      onClick={[Function]}
    >
      <svg
        className="icon"
        fill="currentColor"
        height={25}
        size={25}
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width={25}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        />
      </svg>
    </div>
  </div>
</div>
`;
